--- a/Exemples/fetch-async-et-await.html
+++ b/Exemples/fetch-async-et-await.html
@@ -8,13 +8,14 @@
     <script>
 
         let fonctionSynchronisable = async function() {
-             let response = fetch('https://wizard-world-api.herokuapp.com/Wizards')
-             let data = response.json()
+             let response = await fetch('https://wizard-world-api.herokuapp.com/Wizards')
+             let data = await response.json()
 
              console.log( data )
         }
 
-        await fonctionSynchronisable()
+        fonctionSynchronisable()
+        console.log('coucou')
 
     </script>
 </body>
